--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,5 +1,5 @@
 repository:
-  homepage: "https://storybook.kreftforeninge.no"
+  homepage: "https://storybook.kreftforeningen.no"
   description: "Storybook for Kreftforeningen. UI components for the Kreftforeningen platform."
   topics:
     - storybook
